--- a/Pytorch_Fundamentals_UTM.ipynb
+++ b/Pytorch_Fundamentals_UTM.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "gwnqBVCG-nxV"
       ],
-      "authorship_tag": "ABX9TyNHt5omL4p8O6+iDoP05v43",
+      "authorship_tag": "ABX9TyO1W5nBHWZ0fuc03CoP1HB3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4025,7 +4025,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#info for myself and the student"
+        "#additional resources"
       ],
       "metadata": {
         "id": "gwnqBVCG-nxV"
